core/src/main/java/com/example/core/errors/exception/UserNotFoundException.java
package com.example.core.errors.exception;

public class UserNotFoundException extends Exception500 {

    public UserNotFoundException(String message) {
        super(message);
    }
}
